#
# Copyright (c) 2017-2019 THL A29 Limited, a Tencent company. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

set(tcr_public_header
  include/tencentcloud/tcr/v20190924/TcrClient.h
  )

set(tcr_public_header_model
  include/tencentcloud/tcr/v20190924/model/DeleteInstanceCustomizedDomainResponse.h
  include/tencentcloud/tcr/v20190924/model/ManageExternalEndpointRequest.h
  include/tencentcloud/tcr/v20190924/model/TaskDetail.h
  include/tencentcloud/tcr/v20190924/model/DescribeReplicationInstancesResponse.h
  include/tencentcloud/tcr/v20190924/model/DescribeReplicationInstanceCreateTasksResponse.h
  include/tencentcloud/tcr/v20190924/model/WebhookTriggerLog.h
  include/tencentcloud/tcr/v20190924/model/AccessVpc.h
  include/tencentcloud/tcr/v20190924/model/DeleteRepositoryTagsResponse.h
  include/tencentcloud/tcr/v20190924/model/ModifyTagRetentionRuleRequest.h
  include/tencentcloud/tcr/v20190924/model/ModifyRepositoryResponse.h
  include/tencentcloud/tcr/v20190924/model/DescribeNamespacesResponse.h
  include/tencentcloud/tcr/v20190924/model/DownloadHelmChartRequest.h
  include/tencentcloud/tcr/v20190924/model/RetentionRule.h
  include/tencentcloud/tcr/v20190924/model/CreateInstanceResponse.h
  include/tencentcloud/tcr/v20190924/model/DeleteInstanceTokenRequest.h
  include/tencentcloud/tcr/v20190924/model/ModifyRepositoryRequest.h
  include/tencentcloud/tcr/v20190924/model/ReplicationRule.h
  include/tencentcloud/tcr/v20190924/model/DescribeWebhookTriggerLogResponse.h
  include/tencentcloud/tcr/v20190924/model/ModifyInstanceRequest.h
  include/tencentcloud/tcr/v20190924/model/RenewInstanceResponse.h
  include/tencentcloud/tcr/v20190924/model/CreateImmutableTagRulesRequest.h
  include/tencentcloud/tcr/v20190924/model/DescribeRepositoriesResponse.h
  include/tencentcloud/tcr/v20190924/model/DeleteInstanceTokenResponse.h
  include/tencentcloud/tcr/v20190924/model/DescribeInstancesResponse.h
  include/tencentcloud/tcr/v20190924/model/CreateReplicationInstanceRequest.h
  include/tencentcloud/tcr/v20190924/model/ModifyInstanceTokenResponse.h
  include/tencentcloud/tcr/v20190924/model/DescribeTagRetentionRulesRequest.h
  include/tencentcloud/tcr/v20190924/model/RegistryCondition.h
  include/tencentcloud/tcr/v20190924/model/ModifyImmutableTagRulesResponse.h
  include/tencentcloud/tcr/v20190924/model/Region.h
  include/tencentcloud/tcr/v20190924/model/ModifyServiceAccountRequest.h
  include/tencentcloud/tcr/v20190924/model/CreateImageAccelerationServiceResponse.h
  include/tencentcloud/tcr/v20190924/model/CreateMultipleSecurityPolicyResponse.h
  include/tencentcloud/tcr/v20190924/model/CreateTagRetentionRuleResponse.h
  include/tencentcloud/tcr/v20190924/model/DescribeRegionsResponse.h
  include/tencentcloud/tcr/v20190924/model/DescribeChartDownloadInfoResponse.h
  include/tencentcloud/tcr/v20190924/model/DescribeServiceAccountsRequest.h
  include/tencentcloud/tcr/v20190924/model/DescribeExternalEndpointStatusRequest.h
  include/tencentcloud/tcr/v20190924/model/DeleteRepositoryResponse.h
  include/tencentcloud/tcr/v20190924/model/DescribeInstanceAllNamespacesRequest.h
  include/tencentcloud/tcr/v20190924/model/DownloadHelmChartResponse.h
  include/tencentcloud/tcr/v20190924/model/ManageReplicationRequest.h
  include/tencentcloud/tcr/v20190924/model/DeleteWebhookTriggerResponse.h
  include/tencentcloud/tcr/v20190924/model/DescribeTagRetentionExecutionTaskResponse.h
  include/tencentcloud/tcr/v20190924/model/ModifySecurityPolicyRequest.h
  include/tencentcloud/tcr/v20190924/model/DescribeReplicationInstanceSyncStatusResponse.h
  include/tencentcloud/tcr/v20190924/model/DeleteInstanceCustomizedDomainRequest.h
  include/tencentcloud/tcr/v20190924/model/Tag.h
  include/tencentcloud/tcr/v20190924/model/DescribeImagesResponse.h
  include/tencentcloud/tcr/v20190924/model/DescribeInternalEndpointsResponse.h
  include/tencentcloud/tcr/v20190924/model/DeleteImmutableTagRulesResponse.h
  include/tencentcloud/tcr/v20190924/model/ModifyTagRetentionRuleResponse.h
  include/tencentcloud/tcr/v20190924/model/CreateTagRetentionRuleRequest.h
  include/tencentcloud/tcr/v20190924/model/WebhookTarget.h
  include/tencentcloud/tcr/v20190924/model/DescribeInstanceStatusResponse.h
  include/tencentcloud/tcr/v20190924/model/DescribeGCJobsResponse.h
  include/tencentcloud/tcr/v20190924/model/DescribeWebhookTriggerResponse.h
  include/tencentcloud/tcr/v20190924/model/ModifyInstanceTokenRequest.h
  include/tencentcloud/tcr/v20190924/model/CreateNamespaceResponse.h
  include/tencentcloud/tcr/v20190924/model/ModifyImmutableTagRulesRequest.h
  include/tencentcloud/tcr/v20190924/model/Permission.h
  include/tencentcloud/tcr/v20190924/model/DescribeSecurityPoliciesResponse.h
  include/tencentcloud/tcr/v20190924/model/CreateSignatureResponse.h
  include/tencentcloud/tcr/v20190924/model/DeleteRepositoryTagsRequest.h
  include/tencentcloud/tcr/v20190924/model/TcrImageInfo.h
  include/tencentcloud/tcr/v20190924/model/DescribeReplicationInstanceSyncStatusRequest.h
  include/tencentcloud/tcr/v20190924/model/DeleteInstanceResponse.h
  include/tencentcloud/tcr/v20190924/model/DescribeInstanceStatusRequest.h
  include/tencentcloud/tcr/v20190924/model/ModifyWebhookTriggerRequest.h
  include/tencentcloud/tcr/v20190924/model/DeleteReplicationInstanceRequest.h
  include/tencentcloud/tcr/v20190924/model/DeleteNamespaceResponse.h
  include/tencentcloud/tcr/v20190924/model/CreateSignatureRequest.h
  include/tencentcloud/tcr/v20190924/model/CreateSecurityPolicyResponse.h
  include/tencentcloud/tcr/v20190924/model/DescribeRepositoriesRequest.h
  include/tencentcloud/tcr/v20190924/model/DescribeTagRetentionExecutionTaskRequest.h
  include/tencentcloud/tcr/v20190924/model/DeleteServiceAccountResponse.h
  include/tencentcloud/tcr/v20190924/model/ModifyNamespaceResponse.h
  include/tencentcloud/tcr/v20190924/model/TcrNamespaceInfo.h
  include/tencentcloud/tcr/v20190924/model/DescribeWebhookTriggerLogRequest.h
  include/tencentcloud/tcr/v20190924/model/RenewInstanceRequest.h
  include/tencentcloud/tcr/v20190924/model/Schedule.h
  include/tencentcloud/tcr/v20190924/model/DeleteTagRetentionRuleResponse.h
  include/tencentcloud/tcr/v20190924/model/DeleteMultipleSecurityPolicyRequest.h
  include/tencentcloud/tcr/v20190924/model/DescribeImmutableTagRulesResponse.h
  include/tencentcloud/tcr/v20190924/model/CreateSignaturePolicyResponse.h
  include/tencentcloud/tcr/v20190924/model/WebhookTrigger.h
  include/tencentcloud/tcr/v20190924/model/RegistryStatus.h
  include/tencentcloud/tcr/v20190924/model/SecurityPolicy.h
  include/tencentcloud/tcr/v20190924/model/ReplicationFilter.h
  include/tencentcloud/tcr/v20190924/model/CreateInstanceTokenResponse.h
  include/tencentcloud/tcr/v20190924/model/ModifyInstanceResponse.h
  include/tencentcloud/tcr/v20190924/model/RetentionTask.h
  include/tencentcloud/tcr/v20190924/model/DescribeImageAccelerateServiceResponse.h
  include/tencentcloud/tcr/v20190924/model/ModifyServiceAccountPasswordRequest.h
  include/tencentcloud/tcr/v20190924/model/DescribeReplicationInstancesRequest.h
  include/tencentcloud/tcr/v20190924/model/DeleteWebhookTriggerRequest.h
  include/tencentcloud/tcr/v20190924/model/DeleteSignaturePolicyResponse.h
  include/tencentcloud/tcr/v20190924/model/CreateServiceAccountRequest.h
  include/tencentcloud/tcr/v20190924/model/CustomizedDomainInfo.h
  include/tencentcloud/tcr/v20190924/model/DeleteServiceAccountRequest.h
  include/tencentcloud/tcr/v20190924/model/DescribeImageManifestsRequest.h
  include/tencentcloud/tcr/v20190924/model/RegistryChargePrepaid.h
  include/tencentcloud/tcr/v20190924/model/TagSpecification.h
  include/tencentcloud/tcr/v20190924/model/CreateMultipleSecurityPolicyRequest.h
  include/tencentcloud/tcr/v20190924/model/KeyValueString.h
  include/tencentcloud/tcr/v20190924/model/DeleteSecurityPolicyRequest.h
  include/tencentcloud/tcr/v20190924/model/CreateInstanceRequest.h
  include/tencentcloud/tcr/v20190924/model/DescribeInstanceTokenRequest.h
  include/tencentcloud/tcr/v20190924/model/CreateNamespaceRequest.h
  include/tencentcloud/tcr/v20190924/model/CreateServiceAccountResponse.h
  include/tencentcloud/tcr/v20190924/model/DeleteReplicationInstanceResponse.h
  include/tencentcloud/tcr/v20190924/model/GCJobInfo.h
  include/tencentcloud/tcr/v20190924/model/Registry.h
  include/tencentcloud/tcr/v20190924/model/DescribeChartDownloadInfoRequest.h
  include/tencentcloud/tcr/v20190924/model/DescribeExternalEndpointStatusResponse.h
  include/tencentcloud/tcr/v20190924/model/CheckInstanceResponse.h
  include/tencentcloud/tcr/v20190924/model/DescribeInstancesRequest.h
  include/tencentcloud/tcr/v20190924/model/ServiceAccount.h
  include/tencentcloud/tcr/v20190924/model/DescribeImmutableTagRulesRequest.h
  include/tencentcloud/tcr/v20190924/model/Filter.h
  include/tencentcloud/tcr/v20190924/model/RetentionExecution.h
  include/tencentcloud/tcr/v20190924/model/DuplicateImageResponse.h
  include/tencentcloud/tcr/v20190924/model/DescribeReplicationInstanceCreateTasksRequest.h
  include/tencentcloud/tcr/v20190924/model/DeleteSignaturePolicyRequest.h
  include/tencentcloud/tcr/v20190924/model/ModifySecurityPolicyResponse.h
  include/tencentcloud/tcr/v20190924/model/DeleteInstanceRequest.h
  include/tencentcloud/tcr/v20190924/model/DescribeImageManifestsResponse.h
  include/tencentcloud/tcr/v20190924/model/DescribeWebhookTriggerRequest.h
  include/tencentcloud/tcr/v20190924/model/ImmutableTagRule.h
  include/tencentcloud/tcr/v20190924/model/Header.h
  include/tencentcloud/tcr/v20190924/model/RetentionPolicy.h
  include/tencentcloud/tcr/v20190924/model/CreateSecurityPolicyRequest.h
  include/tencentcloud/tcr/v20190924/model/CreateWebhookTriggerRequest.h
  include/tencentcloud/tcr/v20190924/model/DeleteImageAccelerateServiceResponse.h
  include/tencentcloud/tcr/v20190924/model/DescribeInstanceCustomizedDomainResponse.h
  include/tencentcloud/tcr/v20190924/model/CreateImageAccelerationServiceRequest.h
  include/tencentcloud/tcr/v20190924/model/DescribeNamespacesRequest.h
  include/tencentcloud/tcr/v20190924/model/DeleteMultipleSecurityPolicyResponse.h
  include/tencentcloud/tcr/v20190924/model/ManageInternalEndpointResponse.h
  include/tencentcloud/tcr/v20190924/model/CreateInstanceCustomizedDomainRequest.h
  include/tencentcloud/tcr/v20190924/model/CreateTagRetentionExecutionResponse.h
  include/tencentcloud/tcr/v20190924/model/CheckInstanceNameResponse.h
  include/tencentcloud/tcr/v20190924/model/DeleteImageAccelerateServiceRequest.h
  include/tencentcloud/tcr/v20190924/model/DescribeTagRetentionRulesResponse.h
  include/tencentcloud/tcr/v20190924/model/DescribeRegionsRequest.h
  include/tencentcloud/tcr/v20190924/model/ManageExternalEndpointResponse.h
  include/tencentcloud/tcr/v20190924/model/DeleteSecurityPolicyResponse.h
  include/tencentcloud/tcr/v20190924/model/CreateReplicationInstanceResponse.h
  include/tencentcloud/tcr/v20190924/model/CreateInstanceTokenRequest.h
  include/tencentcloud/tcr/v20190924/model/DescribeServiceAccountsResponse.h
  include/tencentcloud/tcr/v20190924/model/CreateInstanceCustomizedDomainResponse.h
  include/tencentcloud/tcr/v20190924/model/PeerReplicationOption.h
  include/tencentcloud/tcr/v20190924/model/DescribeSecurityPoliciesRequest.h
  include/tencentcloud/tcr/v20190924/model/ReplicationRegistry.h
  include/tencentcloud/tcr/v20190924/model/DescribeInternalEndpointsRequest.h
  include/tencentcloud/tcr/v20190924/model/CheckInstanceRequest.h
  include/tencentcloud/tcr/v20190924/model/ModifyNamespaceRequest.h
  include/tencentcloud/tcr/v20190924/model/CreateRepositoryRequest.h
  include/tencentcloud/tcr/v20190924/model/DeleteImageResponse.h
  include/tencentcloud/tcr/v20190924/model/DescribeImageAccelerateServiceRequest.h
  include/tencentcloud/tcr/v20190924/model/DeleteNamespaceRequest.h
  include/tencentcloud/tcr/v20190924/model/DescribeImagesRequest.h
  include/tencentcloud/tcr/v20190924/model/DescribeGCJobsRequest.h
  include/tencentcloud/tcr/v20190924/model/DescribeTagRetentionExecutionRequest.h
  include/tencentcloud/tcr/v20190924/model/CreateRepositoryResponse.h
  include/tencentcloud/tcr/v20190924/model/CheckInstanceNameRequest.h
  include/tencentcloud/tcr/v20190924/model/DescribeInstanceTokenResponse.h
  include/tencentcloud/tcr/v20190924/model/DescribeInstanceCustomizedDomainRequest.h
  include/tencentcloud/tcr/v20190924/model/DescribeTagRetentionExecutionResponse.h
  include/tencentcloud/tcr/v20190924/model/DeleteImmutableTagRulesRequest.h
  include/tencentcloud/tcr/v20190924/model/CreateWebhookTriggerResponse.h
  include/tencentcloud/tcr/v20190924/model/ModifyServiceAccountResponse.h
  include/tencentcloud/tcr/v20190924/model/CreateSignaturePolicyRequest.h
  include/tencentcloud/tcr/v20190924/model/DeleteTagRetentionRuleRequest.h
  include/tencentcloud/tcr/v20190924/model/TcrRepositoryInfo.h
  include/tencentcloud/tcr/v20190924/model/TcrInstanceToken.h
  include/tencentcloud/tcr/v20190924/model/DeleteRepositoryRequest.h
  include/tencentcloud/tcr/v20190924/model/DeleteImageRequest.h
  include/tencentcloud/tcr/v20190924/model/DuplicateImageRequest.h
  include/tencentcloud/tcr/v20190924/model/CreateTagRetentionExecutionRequest.h
  include/tencentcloud/tcr/v20190924/model/ReplicationLog.h
  include/tencentcloud/tcr/v20190924/model/DescribeInstanceAllNamespacesResponse.h
  include/tencentcloud/tcr/v20190924/model/ModifyServiceAccountPasswordResponse.h
  include/tencentcloud/tcr/v20190924/model/ManageInternalEndpointRequest.h
  include/tencentcloud/tcr/v20190924/model/ModifyWebhookTriggerResponse.h
  include/tencentcloud/tcr/v20190924/model/CreateImmutableTagRulesResponse.h
  include/tencentcloud/tcr/v20190924/model/ManageReplicationResponse.h
  )

set(tcr_src
  src/v20190924/TcrClient.cpp
  src/v20190924/model/DeleteInstanceCustomizedDomainResponse.cpp
  src/v20190924/model/ManageExternalEndpointRequest.cpp
  src/v20190924/model/TaskDetail.cpp
  src/v20190924/model/DescribeReplicationInstancesResponse.cpp
  src/v20190924/model/DescribeReplicationInstanceCreateTasksResponse.cpp
  src/v20190924/model/WebhookTriggerLog.cpp
  src/v20190924/model/AccessVpc.cpp
  src/v20190924/model/DeleteRepositoryTagsResponse.cpp
  src/v20190924/model/ModifyTagRetentionRuleRequest.cpp
  src/v20190924/model/ModifyRepositoryResponse.cpp
  src/v20190924/model/DescribeNamespacesResponse.cpp
  src/v20190924/model/DownloadHelmChartRequest.cpp
  src/v20190924/model/RetentionRule.cpp
  src/v20190924/model/CreateInstanceResponse.cpp
  src/v20190924/model/DeleteInstanceTokenRequest.cpp
  src/v20190924/model/ModifyRepositoryRequest.cpp
  src/v20190924/model/ReplicationRule.cpp
  src/v20190924/model/DescribeWebhookTriggerLogResponse.cpp
  src/v20190924/model/ModifyInstanceRequest.cpp
  src/v20190924/model/RenewInstanceResponse.cpp
  src/v20190924/model/CreateImmutableTagRulesRequest.cpp
  src/v20190924/model/DescribeRepositoriesResponse.cpp
  src/v20190924/model/DeleteInstanceTokenResponse.cpp
  src/v20190924/model/DescribeInstancesResponse.cpp
  src/v20190924/model/CreateReplicationInstanceRequest.cpp
  src/v20190924/model/ModifyInstanceTokenResponse.cpp
  src/v20190924/model/DescribeTagRetentionRulesRequest.cpp
  src/v20190924/model/RegistryCondition.cpp
  src/v20190924/model/ModifyImmutableTagRulesResponse.cpp
  src/v20190924/model/Region.cpp
  src/v20190924/model/ModifyServiceAccountRequest.cpp
  src/v20190924/model/CreateImageAccelerationServiceResponse.cpp
  src/v20190924/model/CreateMultipleSecurityPolicyResponse.cpp
  src/v20190924/model/CreateTagRetentionRuleResponse.cpp
  src/v20190924/model/DescribeRegionsResponse.cpp
  src/v20190924/model/DescribeChartDownloadInfoResponse.cpp
  src/v20190924/model/DescribeServiceAccountsRequest.cpp
  src/v20190924/model/DescribeExternalEndpointStatusRequest.cpp
  src/v20190924/model/DeleteRepositoryResponse.cpp
  src/v20190924/model/DescribeInstanceAllNamespacesRequest.cpp
  src/v20190924/model/DownloadHelmChartResponse.cpp
  src/v20190924/model/ManageReplicationRequest.cpp
  src/v20190924/model/DeleteWebhookTriggerResponse.cpp
  src/v20190924/model/DescribeTagRetentionExecutionTaskResponse.cpp
  src/v20190924/model/ModifySecurityPolicyRequest.cpp
  src/v20190924/model/DescribeReplicationInstanceSyncStatusResponse.cpp
  src/v20190924/model/DeleteInstanceCustomizedDomainRequest.cpp
  src/v20190924/model/Tag.cpp
  src/v20190924/model/DescribeImagesResponse.cpp
  src/v20190924/model/DescribeInternalEndpointsResponse.cpp
  src/v20190924/model/DeleteImmutableTagRulesResponse.cpp
  src/v20190924/model/ModifyTagRetentionRuleResponse.cpp
  src/v20190924/model/CreateTagRetentionRuleRequest.cpp
  src/v20190924/model/WebhookTarget.cpp
  src/v20190924/model/DescribeInstanceStatusResponse.cpp
  src/v20190924/model/DescribeGCJobsResponse.cpp
  src/v20190924/model/DescribeWebhookTriggerResponse.cpp
  src/v20190924/model/ModifyInstanceTokenRequest.cpp
  src/v20190924/model/CreateNamespaceResponse.cpp
  src/v20190924/model/ModifyImmutableTagRulesRequest.cpp
  src/v20190924/model/Permission.cpp
  src/v20190924/model/DescribeSecurityPoliciesResponse.cpp
  src/v20190924/model/CreateSignatureResponse.cpp
  src/v20190924/model/DeleteRepositoryTagsRequest.cpp
  src/v20190924/model/TcrImageInfo.cpp
  src/v20190924/model/DescribeReplicationInstanceSyncStatusRequest.cpp
  src/v20190924/model/DeleteInstanceResponse.cpp
  src/v20190924/model/DescribeInstanceStatusRequest.cpp
  src/v20190924/model/ModifyWebhookTriggerRequest.cpp
  src/v20190924/model/DeleteReplicationInstanceRequest.cpp
  src/v20190924/model/DeleteNamespaceResponse.cpp
  src/v20190924/model/CreateSignatureRequest.cpp
  src/v20190924/model/CreateSecurityPolicyResponse.cpp
  src/v20190924/model/DescribeRepositoriesRequest.cpp
  src/v20190924/model/DescribeTagRetentionExecutionTaskRequest.cpp
  src/v20190924/model/DeleteServiceAccountResponse.cpp
  src/v20190924/model/ModifyNamespaceResponse.cpp
  src/v20190924/model/TcrNamespaceInfo.cpp
  src/v20190924/model/DescribeWebhookTriggerLogRequest.cpp
  src/v20190924/model/RenewInstanceRequest.cpp
  src/v20190924/model/Schedule.cpp
  src/v20190924/model/DeleteTagRetentionRuleResponse.cpp
  src/v20190924/model/DeleteMultipleSecurityPolicyRequest.cpp
  src/v20190924/model/DescribeImmutableTagRulesResponse.cpp
  src/v20190924/model/CreateSignaturePolicyResponse.cpp
  src/v20190924/model/WebhookTrigger.cpp
  src/v20190924/model/RegistryStatus.cpp
  src/v20190924/model/SecurityPolicy.cpp
  src/v20190924/model/ReplicationFilter.cpp
  src/v20190924/model/CreateInstanceTokenResponse.cpp
  src/v20190924/model/ModifyInstanceResponse.cpp
  src/v20190924/model/RetentionTask.cpp
  src/v20190924/model/DescribeImageAccelerateServiceResponse.cpp
  src/v20190924/model/ModifyServiceAccountPasswordRequest.cpp
  src/v20190924/model/DescribeReplicationInstancesRequest.cpp
  src/v20190924/model/DeleteWebhookTriggerRequest.cpp
  src/v20190924/model/DeleteSignaturePolicyResponse.cpp
  src/v20190924/model/CreateServiceAccountRequest.cpp
  src/v20190924/model/CustomizedDomainInfo.cpp
  src/v20190924/model/DeleteServiceAccountRequest.cpp
  src/v20190924/model/DescribeImageManifestsRequest.cpp
  src/v20190924/model/RegistryChargePrepaid.cpp
  src/v20190924/model/TagSpecification.cpp
  src/v20190924/model/CreateMultipleSecurityPolicyRequest.cpp
  src/v20190924/model/KeyValueString.cpp
  src/v20190924/model/DeleteSecurityPolicyRequest.cpp
  src/v20190924/model/CreateInstanceRequest.cpp
  src/v20190924/model/DescribeInstanceTokenRequest.cpp
  src/v20190924/model/CreateNamespaceRequest.cpp
  src/v20190924/model/CreateServiceAccountResponse.cpp
  src/v20190924/model/DeleteReplicationInstanceResponse.cpp
  src/v20190924/model/GCJobInfo.cpp
  src/v20190924/model/Registry.cpp
  src/v20190924/model/DescribeChartDownloadInfoRequest.cpp
  src/v20190924/model/DescribeExternalEndpointStatusResponse.cpp
  src/v20190924/model/CheckInstanceResponse.cpp
  src/v20190924/model/DescribeInstancesRequest.cpp
  src/v20190924/model/ServiceAccount.cpp
  src/v20190924/model/DescribeImmutableTagRulesRequest.cpp
  src/v20190924/model/Filter.cpp
  src/v20190924/model/RetentionExecution.cpp
  src/v20190924/model/DuplicateImageResponse.cpp
  src/v20190924/model/DescribeReplicationInstanceCreateTasksRequest.cpp
  src/v20190924/model/DeleteSignaturePolicyRequest.cpp
  src/v20190924/model/ModifySecurityPolicyResponse.cpp
  src/v20190924/model/DeleteInstanceRequest.cpp
  src/v20190924/model/DescribeImageManifestsResponse.cpp
  src/v20190924/model/DescribeWebhookTriggerRequest.cpp
  src/v20190924/model/ImmutableTagRule.cpp
  src/v20190924/model/Header.cpp
  src/v20190924/model/RetentionPolicy.cpp
  src/v20190924/model/CreateSecurityPolicyRequest.cpp
  src/v20190924/model/CreateWebhookTriggerRequest.cpp
  src/v20190924/model/DeleteImageAccelerateServiceResponse.cpp
  src/v20190924/model/DescribeInstanceCustomizedDomainResponse.cpp
  src/v20190924/model/CreateImageAccelerationServiceRequest.cpp
  src/v20190924/model/DescribeNamespacesRequest.cpp
  src/v20190924/model/DeleteMultipleSecurityPolicyResponse.cpp
  src/v20190924/model/ManageInternalEndpointResponse.cpp
  src/v20190924/model/CreateInstanceCustomizedDomainRequest.cpp
  src/v20190924/model/CreateTagRetentionExecutionResponse.cpp
  src/v20190924/model/CheckInstanceNameResponse.cpp
  src/v20190924/model/DeleteImageAccelerateServiceRequest.cpp
  src/v20190924/model/DescribeTagRetentionRulesResponse.cpp
  src/v20190924/model/DescribeRegionsRequest.cpp
  src/v20190924/model/ManageExternalEndpointResponse.cpp
  src/v20190924/model/DeleteSecurityPolicyResponse.cpp
  src/v20190924/model/CreateReplicationInstanceResponse.cpp
  src/v20190924/model/CreateInstanceTokenRequest.cpp
  src/v20190924/model/DescribeServiceAccountsResponse.cpp
  src/v20190924/model/CreateInstanceCustomizedDomainResponse.cpp
  src/v20190924/model/PeerReplicationOption.cpp
  src/v20190924/model/DescribeSecurityPoliciesRequest.cpp
  src/v20190924/model/ReplicationRegistry.cpp
  src/v20190924/model/DescribeInternalEndpointsRequest.cpp
  src/v20190924/model/CheckInstanceRequest.cpp
  src/v20190924/model/ModifyNamespaceRequest.cpp
  src/v20190924/model/CreateRepositoryRequest.cpp
  src/v20190924/model/DeleteImageResponse.cpp
  src/v20190924/model/DescribeImageAccelerateServiceRequest.cpp
  src/v20190924/model/DeleteNamespaceRequest.cpp
  src/v20190924/model/DescribeImagesRequest.cpp
  src/v20190924/model/DescribeGCJobsRequest.cpp
  src/v20190924/model/DescribeTagRetentionExecutionRequest.cpp
  src/v20190924/model/CreateRepositoryResponse.cpp
  src/v20190924/model/CheckInstanceNameRequest.cpp
  src/v20190924/model/DescribeInstanceTokenResponse.cpp
  src/v20190924/model/DescribeInstanceCustomizedDomainRequest.cpp
  src/v20190924/model/DescribeTagRetentionExecutionResponse.cpp
  src/v20190924/model/DeleteImmutableTagRulesRequest.cpp
  src/v20190924/model/CreateWebhookTriggerResponse.cpp
  src/v20190924/model/ModifyServiceAccountResponse.cpp
  src/v20190924/model/CreateSignaturePolicyRequest.cpp
  src/v20190924/model/DeleteTagRetentionRuleRequest.cpp
  src/v20190924/model/TcrRepositoryInfo.cpp
  src/v20190924/model/TcrInstanceToken.cpp
  src/v20190924/model/DeleteRepositoryRequest.cpp
  src/v20190924/model/DeleteImageRequest.cpp
  src/v20190924/model/DuplicateImageRequest.cpp
  src/v20190924/model/CreateTagRetentionExecutionRequest.cpp
  src/v20190924/model/ReplicationLog.cpp
  src/v20190924/model/DescribeInstanceAllNamespacesResponse.cpp
  src/v20190924/model/ModifyServiceAccountPasswordResponse.cpp
  src/v20190924/model/ManageInternalEndpointRequest.cpp
  src/v20190924/model/ModifyWebhookTriggerResponse.cpp
  src/v20190924/model/CreateImmutableTagRulesResponse.cpp
  src/v20190924/model/ManageReplicationResponse.cpp
  )

set(tcr_include
    include/tencentcloud/tcr
  )

add_library(tcr ${LIB_TYPE}
  ${tcr_public_header}
  ${tcr_public_header_model}
  ${tcr_src})

set_target_properties(tcr
  PROPERTIES
  LINKER_LANGUAGE CXX
  ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib
  LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib
  RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
  OUTPUT_NAME ${TARGET_OUTPUT_NAME_PREFIX}tcr
  )

target_include_directories(tcr
  PRIVATE include
    ${CMAKE_SOURCE_DIR}/core/include
  )
target_link_libraries(tcr
  core)

#install(FILES ${tcr_public_header}
#  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/tencentcloud/tcr/v20190924)
#install(FILES ${tcr_public_header_model}
#  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/tencentcloud/tcr/v20190924/model)
install(DIRECTORY ${tcr_include}
  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/tencentcloud)

install(TARGETS tcr
  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
  )
